# scraper-kavak

./: README.md  start.sh
.github/actions/install-env/: action.yml
.github/workflows/: scraper.yml
kavak_scraper/: autos.json  cookies.json  pyproject.toml  start.sh
kavak_scraper/src/kavak_scraper/: main.py
